--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p>Search all Coronado Homes for sale.</p>
 			<ul data-role="listview" data-inset="true">
 				<li><a href="#search">
-					<img src="../_assets/img/album-bb.jpg">
+					<img src="../images/CoronadoAerial.jpg">
 					<h2>Search All Properties</h2></a>
 				</li>
 				<li><a href="#newlistings">
@@ -31,11 +31,11 @@
 					<h2>Find an Agent</h2></a>
 				</li>
 				<li><a href="#market">
-					<img src="../_assets/img/album-bb.jpg">
+					<img src="../images/IMG_1232.JPG">
 					<h2>Market Conditions</h2></a>
 				</li>
 				<li><a href="#contactus">
-					<img src="../_assets/img/album-bb.jpg">
+					<img src="../images/Flagship.jpg">
 					<h2>Contact Us</h2></a>
 				</li>
 			</ul>
@@ -74,11 +74,11 @@
 			</fieldset>
 			<div class="ui-field-contain">
 				<label for="text-12">Minimum Beds:</label>
-				<input type="text" name="text-12" id="text-12" value="" placeholder="1"> 
+				<input type="number" name="text-12" id="text-12" value="" placeholder="1"> 
 			</div>
 			<div class="ui-field-contain">
 				<label for="text-12">Max Price: ($)</label>
-				<input type="text" name="text-12" id="text-12" value="" placeholder="50,000,000"> 
+				<input type="number" name="text-12" id="text-12" value="" placeholder="50,000,000"> 
 			</div>
 				<input type="submit" value="Search">
 			</div>
@@ -105,6 +105,7 @@
 
 		<div role="main" class="ui-content">
 			<p>Featured Listings Go Here</p>
+			<script charset="UTF-8" type="text/javascript" id="idxwidgetsrc-42145" src="http://search.coronadoreforsale.com/idx/customslideshowjs.php?widgetid=42145"></script>
 		</div><!-- /content -->
 
 		<div data-role="footer" data-position="fixed" class="ui-footer ui-bar-a ui-footer-fixed slideup">
@@ -119,14 +120,15 @@
 		</div><!-- /footer -->
 	</div><!-- /page -->
 
-	<div data-role="page" id="market" data-dialog="true">
+	<div data-role="page" id="market">
 
 		<div data-role="header">
-			<h1>Contact Us</h1>
+			<h1>Coronado Market</h1>
 		</div><!-- /header -->
 
 		<div role="main" class="ui-content">
 			<p>Page content goes here.</p>
+			<script charset="UTF-8" type="text/javascript" id="idxwidgetsrc-42795" src="http://search.coronadoreforsale.com/idx/customshowcasejs.php?widgetid=42795"></script>
 		</div><!-- /content -->
 
 		<div data-role="footer" data-position="fixed" class="ui-footer ui-bar-a ui-footer-fixed slideup">
@@ -134,7 +136,7 @@
 				<ul>
 					<li><a href="#home" data-icon="home">Home</a></li>
 					<li><a href="#search" data-icon="search">Search</a></li>
-					<li><a href="#newlistings" data-icon="star" class="ui-btn-active">Browse</a></li>
+					<li><a href="#newlistings" data-icon="star">Browse</a></li>
 					<li><a href="#contactus" data-icon="gear">Contact Us</a></li>
 				</ul>
 			</div><!-- /navbar -->
