--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<p>Search all Coronado Homes for sale.</p>
 			<ul data-role="listview" data-inset="true">
 				<li><a href="#search">
-					<img src="../images/CoronadoAerial.jpg">
+					<img src="images/CoronadoAerial.jpg">
 					<h2>Search All Properties</h2></a>
 				</li>
 				<li><a href="#newlistings">
@@ -31,11 +31,11 @@
 					<h2>Find an Agent</h2></a>
 				</li>
 				<li><a href="#market">
-					<img src="../images/IMG_1232.JPG">
+					<img src="images/IMG_1232.JPG">
 					<h2>Market Conditions</h2></a>
 				</li>
 				<li><a href="#contactus">
-					<img src="../images/Flagship.jpg">
+					<img src="images/Flagship.jpg">
 					<h2>Contact Us</h2></a>
 				</li>
 			</ul>
