--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Coronado RE For Sale</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css" />
-	<script src="jquery.mobile-1.4.5/jquery-1.11.2.min.js"></script>
+	<script src="jquery.mobile-1.4.5/jquery-1.11.2.js"></script>
 	<script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
