--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 					<h2>Search All Properties</h2></a>
 				</li>
 				<li><a href="#newlistings">
-					<img src="../_assets/img/album-bb.jpg">
+					<img src="">
 					<h2>New Listings</h2></a>
 				</li>
 				<li><a href="#">
-					<img src="../_assets/img/album-bb.jpg">
+					<img src="">
 					<h2>Find an Agent</h2></a>
 				</li>
 				<li><a href="#market">
